--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
-@font-face { font-family: "PT Sans"; src: url("fonts/PT_Sans-Web-Regular.ttf") format("truetype"); font-weight: normal; font-style: normal; }
-@font-face { font-family: "PT Sans"; src: url("fonts/PT_Sans-Web-Bold.ttf") format("truetype"); font-weight: bold; font-style: normal; }
+@font-face { font-family: "PT Sans"; src: url("../fonts/PTSans-Regular.ttf") format("truetype"); font-weight: normal; font-style: normal; }
+@font-face { font-family: "PT Sans"; src: url("../fonts/PTSans-Bold.ttf") format("truetype"); font-weight: bold; font-style: normal; }
 
 @font-face {
     font-family: 'Oswald';
