--- a/test/style.css
+++ b/test/style.css
@@ -165,6 +165,8 @@ label.error { display: none !important; }
 .last-step-form__accept { font-size: 11px; color: #4A4A4A; }
 .last-step-form__accept a { color: inherit; text-decoration: underline; }
 
+.contact-form__button img { display: none; vertical-align: text-bottom; width: 22px; margin-right: 7px;}
+
 .after-submit { background: #FFF; }
 .after-submit .container { display: -webkit-box; display: -ms-flexbox; display: flex; -ms-flex-wrap: nowrap; flex-wrap: nowrap; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; width: 100%; height: 100%; padding: 150px 0; }
 .after-submit__title { padding-top: 80px; font-size: 28px; font-weight: bold; margin-bottom: 10px; background: url("img/done.png") no-repeat top center; text-align: center; }
